<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    tools:context=".EditTaskActivity"
    tools:ignore="ExtraText">
    <TableRow
        android:layout_marginTop="15dp"
        >

        <TextView
            android:fontFamily="sans-serif-black"
            android:textSize="24sp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:text="@string/ChangeTask"
            android:textColor="@color/white"
        />

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:layout_marginEnd="15dp"
            android:padding="8dp"
            android:background="@drawable/button"
            android:src="@drawable/arrow"
            tools:ignore="SpeakableTextPresentCheck"
            android:onClick="BackToSettingsTask"
            />
    </TableRow>

    <TableRow>
        <EditText

            android:layout_weight="1"
            android:layout_marginTop="65dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:height="48dp"
            android:background="@drawable/textbox"
            android:textColorHint="@color/gray"
            android:hint="@string/taskname"
            android:textColor="@color/black"
            />
    </TableRow>>

    <TableRow>

        <ScrollView

            android:layout_height="40dp"
            android:layout_width="0dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/fieldtime"
            android:layout_weight="1"
            tools:ignore="SpeakableTextPresentCheck">

            <TableLayout
                android:layout_width="120dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="40dp"
                android:layout_height="15dp"
                android:orientation="vertical"
                >

                <TableRow>

                    <TextView
                        android:fontFamily="sans-serif-black"
                        android:textColor="@color/gray"
                        android:textSize="20sp"
                        android:text="@string/_17_30"
                        />

                </TableRow>

                <TableRow>

                    <TextView
                        android:fontFamily="sans-serif-black"
                        android:textColor="@color/gray"
                        android:textSize="20sp"
                        android:text="@string/_17_00"
                        />

                </TableRow>

                <TableRow>

                    <TextView
                        android:fontFamily="sans-serif-black"
                        android:textColor="@color/gray"
                        android:textSize="20sp"
                        android:text="@string/_16_30"
                        />

                </TableRow>

                <TableRow>

                    <TextView
                        android:fontFamily="sans-serif-black"
                        android:textColor="@color/gray"
                        android:textSize="20sp"
                        android:text="@string/_16_00"
                        />

                </TableRow>

                <TableRow>

                    <TextView
                        android:fontFamily="sans-serif-black"
                        android:textColor="@color/gray"
                        android:textSize="20sp"
                        android:text="@string/_15_30"
                        android:layout_marginBottom="10dp"
                        />

                </TableRow>

            </TableLayout>

        </ScrollView>

        <ScrollView

            android:layout_height="40dp"
            android:layout_width="0dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:layout_weight="1"
            android:background="@drawable/fielddate"

            tools:ignore="SpeakableTextPresentCheck" >

            <TableLayout
                android:layout_width="120dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="40dp"
                android:layout_height="15dp"
                android:orientation="vertical"
                >

                <TableRow>

                    <TextView
                        android:fontFamily="sans-serif-black"
                        android:textColor="@color/gray"
                        android:textSize="20sp"
                        android:text="@string/_16_01_2021"
                        />

                </TableRow>

                <TableRow>

                    <TextView
                        android:fontFamily="sans-serif-black"
                        android:textColor="@color/gray"
                        android:textSize="20sp"
                        android:text="@string/_15_01_2021"
                        />

                </TableRow>

                <TableRow>

                    <TextView
                        android:fontFamily="sans-serif-black"
                        android:textColor="@color/gray"
                        android:textSize="20sp"
                        android:text="@string/_14_01_2021"
                        />

                </TableRow>

                <TableRow>

                    <TextView
                        android:fontFamily="sans-serif-black"
                        android:textColor="@color/gray"
                        android:textSize="20sp"
                        android:text="@string/_13_01_2021"
                        />

                </TableRow>

                <TableRow>

                    <TextView
                        android:fontFamily="sans-serif-black"
                        android:textColor="@color/gray"
                        android:textSize="20sp"
                        android:text="@string/_12_01_2021"
                        android:layout_marginBottom="10dp"
                        />

                </TableRow>

            </TableLayout>

        </ScrollView>

</TableRow>

    <TableRow>

        <EditText

            android:textColor="@color/black"
            android:layout_width="364dp"
            android:layout_height="120dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:gravity="top|start"
            android:paddingTop="8dp"
            android:background="@drawable/textbox"
            android:hint="@string/taskDescription"
            android:textColorHint="@color/gray"
            tools:ignore="SpeakableTextPresentCheck" />

    </TableRow>

    <TableRow>

    <androidx.appcompat.widget.AppCompatButton

        android:textSize="18sp"
        android:layout_marginTop="150dp"
        android:background="@drawable/bigbuttonred"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:layout_weight="1"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_height="60dp"
        android:text="@string/DeleteTask"
        android:textAllCaps="false"

        />

    </TableRow>

    <TableRow>

        <androidx.appcompat.widget.AppCompatButton

            android:textSize="18sp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bigbutton"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_height="60dp"
            android:text="@string/WriteTask"
            android:textAllCaps="false"

            />

    </TableRow>



</TableLayout>