<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAlarmActivity"
    android:background="@color/green"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:fontFamily="sans-serif-black"
        android:textSize="24sp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:text="@string/addalarm"
        android:textColor="@color/white"
        />

        <View
            android:layout_height="0dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            />
        <ImageButton

            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/button"
            android:src="@drawable/arrow"
            tools:ignore="SpeakableTextPresentCheck"
            android:onClick="BackToSettingsAlarm"
            />
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <ScrollView
        android:layout_weight="1"
        android:layout_height="35dp"
        android:background="@drawable/fieldtime"
        android:layout_marginTop="65dp"
        android:layout_marginBottom="25dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
         android:layout_width="0dp">
        <TableLayout
            android:layout_width="120dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="40dp"
            android:layout_height="15dp"
            android:orientation="vertical"
            >

            <TableRow>

                <TextView
                    android:fontFamily="sans-serif-black"
                    android:textColor="@color/gray"
                    android:textSize="20sp"
                    android:text="@string/_17_30"
                    />

            </TableRow>

            <TableRow>

                <TextView
                    android:fontFamily="sans-serif-black"
                    android:textColor="@color/gray"
                    android:textSize="20sp"
                    android:text="@string/_17_00"
                    />

            </TableRow>

            <TableRow>

                <TextView
                    android:fontFamily="sans-serif-black"
                    android:textColor="@color/gray"
                    android:textSize="20sp"
                    android:text="@string/_16_30"
                    />

            </TableRow>

            <TableRow>

                <TextView
                    android:fontFamily="sans-serif-black"
                    android:textColor="@color/gray"
                    android:textSize="20sp"
                    android:text="@string/_16_00"
                    />

            </TableRow>

            <TableRow>

                <TextView
                    android:fontFamily="sans-serif-black"
                    android:textColor="@color/gray"
                    android:textSize="20sp"
                    android:text="@string/_15_30"
                    android:layout_marginBottom="10dp"
                    />

            </TableRow>

        </TableLayout>
    </ScrollView>

        <ScrollView
            android:layout_height="35dp"
            android:layout_weight="1"
            android:background="@drawable/fielddate"
            android:layout_marginTop="65dp"
            android:layout_marginBottom="25dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="15dp"
             android:layout_width="0dp">
            <TableLayout
                android:layout_width="120dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="40dp"
                android:layout_height="15dp"
                android:orientation="vertical"
                >

                <TableRow>

                    <TextView
                        android:fontFamily="sans-serif-black"
                        android:textColor="@color/gray"
                        android:textSize="20sp"
                        android:text="@string/_15_01_2021"
                        />

                </TableRow>

                <TableRow>

                    <TextView
                        android:fontFamily="sans-serif-black"
                        android:textColor="@color/gray"
                        android:textSize="20sp"
                        android:text="@string/_15_01_2021"
                        />

                </TableRow>

                <TableRow>

                    <TextView
                        android:fontFamily="sans-serif-black"
                        android:textColor="@color/gray"
                        android:textSize="20sp"
                        android:text="@string/_14_01_2021"
                        />

                </TableRow>

                <TableRow>

                    <TextView
                        android:fontFamily="sans-serif-black"
                        android:textColor="@color/gray"
                        android:textSize="20sp"
                        android:text="@string/_13_01_2021"
                        />

                </TableRow>

                <TableRow>

                    <TextView
                        android:fontFamily="sans-serif-black"
                        android:textColor="@color/gray"
                        android:textSize="20sp"
                        android:text="@string/_12_01_2021"
                        android:layout_marginBottom="10dp"
                        />

                </TableRow>

            </TableLayout>
        </ScrollView>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:textSize="20sp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:text="@string/repeat"
        android:textColor="@color/white"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatCheckBox
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rectangle"
            android:textOff=""
            android:textOn=""
            tools:ignore="TouchTargetSizeCheck" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            android:textSize="15sp"
            android:fontFamily="sans-serif"
            android:textColor="@color/white"
            android:text="@string/monday"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatCheckBox
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rectangle"
            android:textOff=""
            android:textOn=""
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            android:textSize="15sp"
            android:fontFamily="sans-serif"
            android:textColor="@color/white"
            android:text="@string/tuesday"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatCheckBox
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rectangle"
            android:textOff=""
            android:textOn=""
            tools:ignore="TouchTargetSizeCheck" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            android:textSize="15sp"
            android:fontFamily="sans-serif"
            android:textColor="@color/white"
            android:text="@string/wednesday"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatCheckBox
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rectangle"
            android:textOff=""
            android:textOn=""
            tools:ignore="TouchTargetSizeCheck" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            android:textSize="15sp"
            android:fontFamily="sans-serif"
            android:textColor="@color/white"
            android:text="@string/thursday"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatCheckBox
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rectangle"
            android:textOff=""
            android:textOn=""
            tools:ignore="TouchTargetSizeCheck" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            android:textSize="15sp"
            android:fontFamily="sans-serif"
            android:textColor="@color/white"
            android:text="@string/friday"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatCheckBox
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rectangle"
            android:textOff=""
            android:textOn=""
            tools:ignore="TouchTargetSizeCheck" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            android:textSize="15sp"
            android:fontFamily="sans-serif"
            android:textColor="@color/white"
            android:text="@string/subbota"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatCheckBox
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rectangle"
            android:textOff=""
            android:textOn=""
            tools:ignore="TouchTargetSizeCheck" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            android:textSize="15sp"
            android:fontFamily="sans-serif"
            android:textColor="@color/white"
            android:text="@string/sunday"
            />
    </LinearLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:textSize="18sp"
        android:fontFamily="sans-serif"
        android:textColor="@color/white"
        android:background="@drawable/bigbutton"
        android:text="@string/createalarm"
        android:layout_width="312dp"
        android:layout_height="60dp"
        android:layout_marginTop="150dp"
        android:layout_marginStart="50dp"
        android:textAlignment="center"
        android:textAllCaps="false"
        />
</LinearLayout>