<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserLoginActivity"
    android:background="@color/green"
    android:rowCount="5"
    android:columnCount="2"
    >

    <TextView

        android:layout_row="0"
        android:layout_column="0"
        android:fontFamily="sans-serif-black"
        android:textSize="24sp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:text="@string/Register"
        android:textColor="@color/white"

        />

    <androidx.appcompat.widget.AppCompatImageButton

        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_gravity="end"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/button"
        android:onClick="Leave"
        android:src="@drawable/arrow"
        tools:ignore="SpeakableTextPresentCheck"

        />

    <EditText

        android:id="@+id/username"
        android:inputType="textPersonName"
        android:layout_column="0"
        android:layout_width="360dp"
        android:layout_columnSpan="2"
        android:layout_row="1"
        android:layout_marginTop="180dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_height="48dp"
        android:background="@drawable/textbox"
        android:textColorHint="@color/gray"
        android:hint="@string/username"
        android:textColor="@color/black"

        />

    <EditText

        android:id="@+id/email"
        android:layout_columnSpan="2"
        android:inputType="textEmailAddress"
        android:layout_column="0"
        android:layout_width="360dp"
        android:layout_row="2"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_height="48dp"
        android:background="@drawable/textbox"
        android:textColorHint="@color/gray"
        android:hint="@string/email"
        android:textColor="@color/black"

        />

    <EditText

        android:id="@+id/password"
        android:layout_columnSpan="2"
        android:layout_width="360dp"
        android:layout_height="48dp"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/textbox"
        android:fontFamily="sans-serif"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/black"

        android:textColorHint="@color/gray" />

    <androidx.appcompat.widget.AppCompatButton

        android:textAllCaps="false"
        android:layout_columnSpan="2"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bigbutton"
        android:text="@string/Register"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:onClick="Enter"


        />

</GridLayout>